[package]
name = "mongo_data_exporter"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Indra Mahendra"]
license = "MIT"
repository = "https://github.com/mahendrakevin/mongo_data_exporter"
description = "A simple MongoDB data exporter to another MongoDB instance"

[dependencies]
async-trait = "0.1.80"
mongodb = { version = "2.8.2", features = ["bson-chrono-0_4"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4.38"
futures = "0.3.30"
log = "0.4.21"
